.metadata/.plugins/org.eclipse.cdt.ui/Nahuel.build.log
20:40:58 **** Incremental Build of configuration Debug for project Nahuel ****
make all 
Building file: ../src/Nahuel.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Nahuel.d" -MT"src/Nahuel.o" -o "src/Nahuel.o" "../src/Nahuel.c"
../src/Nahuel.c:15:16: warning: "/*" within comment [-Wcomment]
  puts("HOla"); /* prints HOla
                 
../src/Nahuel.c: In function ‘main’:
../src/Nahuel.c:45:17: warning: implicit declaration of function ‘sumar’ [-Wimplicit-function-declaration]
     resultado = sumar(numero1,numero2);
                 ^~~~~
../src/Nahuel.c: At top level:
../src/Nahuel.c:50:21: error: unknown type name ‘num2’
  int sumar(int num1,num2){
                     ^~~~
make: *** [src/Nahuel.o] Error 1
src/subdir.mk:18: fallo en las instrucciones para el objetivo 'src/Nahuel.o'
"make all" terminated with exit code 2. Build might be incomplete.

20:40:58 Build Failed. 3 errors, 2 warnings. (took 325ms)

